<resources>
    <string name="app_name">TechnicalTest</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_splash">Title Splash</string>
    <string name="login_infos_title">Login Infos</string>
    <string name="id_infos_title">Id Infos</string>
    <string name="misc_infos_title">Misc Infos</string>
    <string name="pictures_title">Pictures</string>
    <string name="icon_open_eyes">&#xf06e;</string>
    <string name="icon_slashed_eyes">&#xf070;</string>
</resources>
